fixed text alignment in footer

--- a/src/assets/css/footer.css
+++ b/src/assets/css/footer.css
@@ -20,8 +20,8 @@
   flex-flow: row wrap;
   justify-content: space-evenly;
   justify-items: space-evenly;
-  align-content: flex-start;
-  align-items: flex-start;
+  align-content: center;
+  align-items: center;
   width: 80%;
   max-width: 1000px;
   min-width: 300px;
